deploy/nestjsapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nestjsapi
  namespace: default
  labels:
    app:  nestjsapi
spec:
  selector:
    matchLabels:
      app: nestjsapi
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  nestjsapi
    spec:
      containers:
      - name:  nestjsapi
        image: deep1024/nestapi:f484c69c91d918f345ecca314976bc11e0070154
        ports:
        - containerPort:  3000
          name:  nestjsapi
      restartPolicy: Always
