deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nestjsapiservice
  namespace: default
spec:
  selector:
    app: nestjsapi
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: nestjsapiservice
    protocol: TCP
    port: 3100
    targetPort: 3000
