deploy/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjsapiingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: nestjsapi.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nestjsapiservice
            port:
              number: 3100
